--- a/Signup.html
+++ b/Signup.html
@@ -32,6 +32,7 @@
             value=""
             name="username"
             maxlength="20"
+            id="email"
             required
           />
         </p>
@@ -44,6 +45,7 @@
             value=""
             name="password"
             maxlength="20"
+            id="password"
             required
           />
         </p>
