--- a/Login.html
+++ b/Login.html
@@ -23,6 +23,7 @@
 					<p class="center">
 						<input type="submit" value="Submit" />
 						<input type="reset" value="Reset" />
+						<input type="button" value="Sign in with Google" id="google">
         </p>
 		</form>
 	</div>
